;; we start by ignoring node_modules. if you need to consume an OCaml
;; project from `node_modules`, this should work:
;; - remove the `dirs` stanza below
;; - add a `(subdir node_modules (dirs only_your_package))`

(dirs :standard \ node_modules)

(rule
 (alias runtest)
 (deps
  (alias_rec test))
 (action
  (progn
   (run npx jest --config ../../%{project_root}/jest.config.cjs)
   (setenv
    NODE_OPTIONS
    --experimental-vm-modules
    (run npx jest --config ../../%{project_root}/jest.config.mjs)))))
