opam-version: "2.0"
synopsis: "Melange bindings for Moment.js."
maintainer: "Ahrefs"
authors: "Jiayu Liu <jimexist@gmail.com>"
license: "MIT"
tags: ["melange" "org:ahrefs"]
homepage: "https://github.com/ahrefs/melange-moment"
bug-reports: "https://github.com/ahrefs/melange-moment"
depends: [
  "dune" {>= "3.8"}
  "ocaml" {>= "4.14.0"}
  "melange" {>= "1.0.0"}
  "reason"
  "melange-jest" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ahrefs/melange-moment.git"

pin-depends: [
  [ "melange-jest.dev" "git+https://github.com/melange-community/melange-jest.git#8d23fb39db19151cb3263d0daedb7b2a7869ce62" ]
]
