opam-version: "2.0"
synopsis: "Melange bindings for Moment.js"
maintainer: "Ahrefs"
authors: "Jiayu Liu <jimexist@gmail.com>"
license: "MIT"
tags: ["melange" "org:ahrefs"]
homepage: "https://github.com/ahrefs/melange-moment"
bug-reports: "https://github.com/ahrefs/melange-moment"
depends: [
  "dune" {>= "3.8"}
  "ocaml"
  "melange" {>= "2.0.0"}
  "reason"
  "melange-jest" {with-test}
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ahrefs/melange-moment.git"
depexts: [
  ["moment"] {npm-version = "^2.26.0"}
]
